<resources>
    <string name="app_name">A Special Dinner</string>
    <string name="action_settings">Manage Dinner</string>
    <string name="dinner1">Dinner1Test</string>
    <string name="guestList">Guest list</string>
    <string name="groups">Groups</string>
    <string name="relations">Proximity</string>
    <string name="tables">Tables</string>
    <string name="makeItButton">Make new</string>
    <string name="Bribes">Bribes</string>
    <string name="AddDinnerHint">Enter Dinner Name...</string>
    <string name="addDinnerbtn">Add Dinner</string>
    <string name="deleteDinnerbtn">Delete Dinner</string>
    <string name="delete_dinner_spinner_title">Select Dinner</string>
    <string name="AddPersonHint">Name:</string>
    <string name="addPersonbtn">ADD PERSON</string>
    <string name="name">person_name_hint</string>
    <string name="person_name_hint">Name:</string>
    <string name="person_gender_hint">Gender:</string>
    <string name="savebtn">save</string>
    <string name="table_size_hint">Size of table:</string>
    <string name="addTablebtn">Add Table</string>
    <string name="deletebtn">delete</string>
    <string name="couple">couple</string>
    <string name="person">single</string>
    <string name="family">family</string>
    <string name="couple1_hint">Guest1</string>
    <string name="couple2_hint">Guest2</string>
    <string name="addCouplebtn">add couple</string>
    <string name="addFamilybtn">add family</string>
    <string name="familySizeHint">Size of family</string>
    <string name="proximity_name_hint">Guest name</string>
    <string name="addProximitbtn">Add</string>
    <string name="addBtn">Add</string>
    <string name="proximity_select_type_hint">Select target</string>
    <string name="proximity_select_proximity_hint">Select their relationship:</string>
    <string name="proximity_select_target_type_hint">Single/Couple/Family</string>
    <string name="cancel">cancel</string>
    <string name="dialog_fire_missiles">Do you want to delete?</string>
    <string name="fire">delete</string>
    <string name="addBribebtn">add bribe</string>
    <string name="bribe_set_amount_hint">Amount</string>
    <string name="retryBtn">retry</string>
    <string name="makeit_hint">*Select each table to see your result</string>
    <string name="dinnerNameHint">Name:</string>
    <string name="dinnerDateHint">Date:</string>
    <string name="Table_type_hint">Select Table Type:</string>
    <string name="table_size_warning">With rectangle table, table size must be an even number and greater or equal to 6</string>
    <string name="name_warning">Enter the name</string>
    <string name="AddMuti">Add Muti</string>
    <string name="muti_add_person">Fast add people (name,gender)</string>
    <string name="bribe_satis_hint">How do you think about this amount</string>
    <string name="seekbar_min">min</string>
    <string name="seekbar_max">max</string>
    <string name="zero">1</string>
    <string name="force_assign">Force assign</string>
    <string name="single_select_table">Select table</string>
    <string name="single_select_seat">Select_seat</string>
    <string name="score">Score</string>
    <string name="see_exist">see exist plan</string>
    <string name="no_exist_warning">There\'s no exist seating plan</string>
    <string name="no_seats_warning">Don\'t have enough seats</string>
</resources>
