<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ManageDinnerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="28">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:background="#9EB49E">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:text="@string/delete_dinner_spinner_title"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="24sp"/>

            <Spinner
                android:id="@+id/deleteDinnerSpinner"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:prompt="@string/delete_dinner_spinner_title"
                android:spinnerMode="dialog" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/dinnerNameHint"
                android:textColor="#000000"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/dinner_text_input_manage"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:hint="@string/AddDinnerHint"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/dinner_date_linearlayout_manage"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:clickable="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/dinnerDateHint"
                android:textColor="#000000"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/dinner_date_display_manage"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:gravity="center_vertical" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <Button
            android:id="@+id/button_save_dinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#647764"
            android:text="@string/savebtn"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_delete_dinner_with_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#9D2933"
            android:text="@string/deletebtn"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>