<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="30"
    tools:context=".proximity.AddProximityActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="28"
        android:orientation="vertical"
        android:weightSum="20">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <ImageView
            android:id="@+id/proximity_guest1_name_icon_display"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="#FFC773"/>

        <TextView
            android:id="@+id/proximity_guest1_name_display"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="5"
            android:background="#FFC773"
            android:gravity="center"
            android:text="@string/AddPersonHint"
            android:textSize="25sp" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFC773"
            android:paddingHorizontal="10dp"
            android:paddingVertical="3dp"
            android:text="@string/proximity_select_target_type_hint"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/proximity_select_type_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFC773"
            android:paddingHorizontal="10dp"
            android:paddingVertical="3dp"
            android:text="@string/proximity_select_type_hint"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/proximity_select_guest_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFC773"
            android:paddingHorizontal="10dp"
            android:paddingVertical="3dp"
            android:text="@string/proximity_select_proximity_hint"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/proximity_select_proximity_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <Button
            android:id="@+id/button_add_proximity_with_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#647764"
            android:text="@string/addBtn"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>