<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/listPreferredItemHeightLarge"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/border"
    android:orientation="horizontal">


    <ImageView
        android:layout_width="?android:attr/listPreferredItemHeightLarge"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:contentDescription="@string/guestList"
        app:srcCompat="@drawable/table_icon"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="vertical">

        <TextView
            android:id="@+id/result_item_name_textview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:gravity="center_vertical"
            android:paddingHorizontal="10dp"
            android:text="@string/AddPersonHint"
            android:textColor="#000000"
            android:textSize="24dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/result_item_seatId_textview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:gravity="center_vertical"
            android:text="@string/AddPersonHint"
            android:paddingHorizontal="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:paddingHorizontal="10dp"
            android:background="#815463"
            android:text="@string/score"
            android:textColor="#FFFFFF"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/result_item_score_textview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:gravity="center"
            android:paddingHorizontal="10dp"
            android:background="#815463"
            android:text="@string/zero"
            android:textColor="#FFFFFF"
            android:textSize="22sp"/>

    </LinearLayout>

</LinearLayout>