<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="30"
    tools:context=".peoplelist.ManageCoupleActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="28"
        android:orientation="vertical"
        android:weightSum="20">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:fadeScrollbars="false"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:paddingVertical="3dp"
            android:text="@string/couple1_hint"
            android:textSize="30sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFC773"
            android:paddingHorizontal="10dp"
            android:paddingVertical="3dp"
            android:text="@string/person_name_hint"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edit_couple1_name_input"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#C2CCD0" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFC773"
            android:paddingHorizontal="10dp"
            android:paddingVertical="3dp"
            android:text="@string/person_gender_hint"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/edit_couple1_gender_spinner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#C2CCD0" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:fadeScrollbars="false"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:paddingVertical="3dp"
            android:text="@string/couple2_hint"
            android:textSize="30sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFC773"
            android:paddingHorizontal="10dp"
            android:paddingVertical="3dp"
            android:text="@string/person_name_hint"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edit_couple2_name_input"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#C2CCD0" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFC773"
            android:paddingHorizontal="10dp"
            android:paddingVertical="3dp"
            android:text="@string/person_gender_hint"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/edit_couple2_gender_spinner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#C2CCD0" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <Button
            android:id="@+id/button_edit_couple_with_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#647764"
            android:text="@string/savebtn"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/button_delete_couple"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#9D2933"
            android:text="@string/deletebtn"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>