<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="30"
    tools:context=".bribes.AddBribeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="28"
        android:orientation="vertical"
        android:weightSum="20">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFC773"
            android:paddingHorizontal="10dp"
            android:paddingVertical="3dp"
            android:text="@string/proximity_select_target_type_hint"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/bribe_select_type_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFC773"
            android:paddingHorizontal="10dp"
            android:paddingVertical="3dp"
            android:text="@string/proximity_select_type_hint"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/bribe_select_guest_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFC773"
            android:paddingHorizontal="10dp"
            android:paddingVertical="3dp"
            android:text="@string/bribe_set_amount_hint"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/bribe_amount_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:paddingVertical="5dp"
            android:gravity="center_horizontal"
            android:inputType="number"/>



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <Button
            android:id="@+id/button_add_bribe_with_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#647764"
            android:text="@string/addBribebtn"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>