<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".peoplelist.ManagePersonActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="30">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="28"
            android:orientation="vertical"
            android:weightSum="20">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFC773"
                android:paddingHorizontal="10dp"
                android:paddingVertical="3dp"
                android:text="@string/person_name_hint"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edit_person_name_input"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="#E2E2E2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFC773"
                android:paddingHorizontal="10dp"
                android:paddingVertical="3dp"
                android:text="@string/person_gender_hint"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/edit_person_gender_spinner"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="#E2E2E2" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <Button
                android:id="@+id/button_add_person_with_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#647764"
                android:text="@string/savebtn"
                android:textAllCaps="true"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />
            <Button
                android:id="@+id/button_delete_person"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#9D2933"
                android:text="@string/deletebtn"
                android:textAllCaps="true"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>